--- a/authentication.html
+++ b/authentication.html
@@ -1,9 +1,9 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Authentication — Lecomax</title>
+  <title>Authentication â€” Lecomax</title>
   <meta name="theme-color" content="#ffffff" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="styles.css" />
@@ -12,14 +12,14 @@
 <body>
   <div class="topbar">
     <div class="container topbar__inner">
-       <div class="topbar__left"><a href="index.html" class="toplink">← Back to Store</a></div>
+       <div class="topbar__left"><a href="index.html" class="toplink">â† Back to Store</a></div>
     </div>
   </div>
 
   <header class="header">
     <div class="container header__inner">
       <a class="brand" href="index.html">
-        <img class="brand__logo" src="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/logo%20of%20lecomax.png" alt="Lecomax Logo" />
+        
         <span class="brand__text"><span class="brand__name">Lecomax</span><span class="brand__sub">Authentication</span></span>
       </a>
     </div>
@@ -49,3 +49,5 @@
   </section>
 </body>
 </html>
+
+
