--- a/help-center.html
+++ b/help-center.html
@@ -1,9 +1,9 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Help Center — Lecomax</title>
+  <title>Help Center â€” Lecomax</title>
   <meta name="theme-color" content="#ffffff" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
   <div class="topbar">
     <div class="container topbar__inner">
        <div class="topbar__left">
-        <a href="index.html" class="toplink">← Back to Store</a>
+        <a href="index.html" class="toplink">â† Back to Store</a>
       </div>
     </div>
   </div>
@@ -22,7 +22,7 @@
   <header class="header">
     <div class="container header__inner">
       <a class="brand" href="index.html">
-        <img class="brand__logo" src="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/logo%20of%20lecomax.png" alt="Lecomax Logo" />
+        
         <span class="brand__text">
           <span class="brand__name">Lecomax</span>
           <span class="brand__sub">Help Center</span>
@@ -61,8 +61,10 @@
 
   <footer class="footer">
     <div class="container">
-      <p class="muted text-center" style="text-align: center;">© 2026 Lecomax. All rights reserved.</p>
+      <p class="muted text-center" style="text-align: center;">Â© 2026 Lecomax. All rights reserved.</p>
     </div>
   </footer>
 </body>
 </html>
+
+
