--- a/newsroom.html
+++ b/newsroom.html
@@ -1,19 +1,19 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Newsroom — Lecomax</title>
+  <title>Newsroom â€” Lecomax</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="topbar"><div class="container topbar__inner"><div class="topbar__left"><a href="index.html" class="toplink">← Back to Store</a></div></div></div>
+  <div class="topbar"><div class="container topbar__inner"><div class="topbar__left"><a href="index.html" class="toplink">â† Back to Store</a></div></div></div>
 
   <header class="header">
     <div class="container header__inner">
       <a class="brand" href="index.html">
-        <img class="brand__logo" src="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/logo%20of%20lecomax.png" alt="Lecomax Logo" />
+        
         <span class="brand__text"><span class="brand__name">Lecomax</span><span class="brand__sub">Newsroom</span></span>
       </a>
     </div>
@@ -27,13 +27,13 @@
       <div style="margin-top: 40px; display: grid; gap: 30px;">
         
         <article class="sideCard" style="display:block;">
-            <div style="font-size: 0.85rem; color: var(--accent); font-weight: 600; margin-bottom: 8px;">NEW LAUNCH • FEB 2026</div>
+            <div style="font-size: 0.85rem; color: var(--accent); font-weight: 600; margin-bottom: 8px;">NEW LAUNCH â€¢ FEB 2026</div>
             <h2 style="margin: 0 0 10px; font-size: 1.4rem;">New Audio Collection Arrives</h2>
             <p class="muted" style="margin-bottom: 0;">We've expanded our headphone lineup with the latest noise-canceling technology from top proprietary brands.</p>
         </article>
 
         <article class="sideCard" style="display:block;">
-            <div style="font-size: 0.85rem; color: var(--accent); font-weight: 600; margin-bottom: 8px;">UPDATE • JAN 2026</div>
+            <div style="font-size: 0.85rem; color: var(--accent); font-weight: 600; margin-bottom: 8px;">UPDATE â€¢ JAN 2026</div>
             <h2 style="margin: 0 0 10px; font-size: 1.4rem;">Enhanced Delivery Speed</h2>
             <p class="muted" style="margin-bottom: 0;">We have partnered with new logistics providers to ensure 48-hour delivery to major cities including Casablanca, Rabat, and Marrakech.</p>
         </article>
@@ -43,3 +43,5 @@
   </section>
 </body>
 </html>
+
+
