--- a/warranty.html
+++ b/warranty.html
@@ -1,23 +1,23 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Warranty Policy — Lecomax</title>
+  <title>Warranty Policy â€” Lecomax</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="topbar">
     <div class="container topbar__inner">
-       <div class="topbar__left"><a href="index.html" class="toplink">← Back to Store</a></div>
+       <div class="topbar__left"><a href="index.html" class="toplink">â† Back to Store</a></div>
     </div>
   </div>
 
   <header class="header">
     <div class="container header__inner">
       <a class="brand" href="index.html">
-        <img class="brand__logo" src="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/logo%20of%20lecomax.png" alt="Lecomax Logo" />
+        
         <span class="brand__text"><span class="brand__name">Lecomax</span><span class="brand__sub">Warranty</span></span>
       </a>
     </div>
@@ -55,3 +55,5 @@
   </section>
 </body>
 </html>
+
+
