--- a/index.html
+++ b/index.html
@@ -343,6 +343,21 @@
     </div>
   </section>
 
+  <!-- NEW TRENDING SECTION (Horizontal Scroll) -->
+  <section class="section" style="padding-bottom:0">
+    <div class="container">
+      <div class="section__head" style="margin-bottom:20px;">
+        <div>
+           <h2 style="font-size:1.8rem; margin-bottom:4px">Trending Now</h2>
+           <p class="muted">Top picks selected for you.</p>
+        </div>
+      </div>
+      <div class="horizontal-scroll" id="trendingList">
+         <!-- Populated by JS -->
+      </div>
+    </div>
+  </section>
+
   <section class="section" id="products">
     <div class="container">
       <div class="section__head">
