--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.fixed.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="card-enhancements.css" />
   <link rel="stylesheet" href="modal.css" />
   <link rel="stylesheet" href="newsletter.css" />
@@ -706,6 +706,6 @@
   </button>
 
   <script src="interactions.js"></script>
-  <script src="app.fixed.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
