--- a/checkout.html
+++ b/checkout.html
@@ -48,6 +48,10 @@
             <form id="checkoutForm" class="card checkout-card">
               <div class="checkout-fields">
                 <div id="checkoutMessage" class="checkout-message" style="display:none;"></div>
+                <div class="checkout-field" style="display:none;">
+                  <label for="website" class="checkout-label">Website</label>
+                  <input id="website" name="website" class="checkout-input" autocomplete="off" tabindex="-1" placeholder="Leave this empty" />
+                </div>
                 <div class="checkout-field">
                   <label for="fullName" class="checkout-label">Full Name</label>
                   <input id="fullName" name="fullName" required class="checkout-input" placeholder="Full name" />
