--- a/index.html
+++ b/index.html
@@ -482,6 +482,23 @@
           </div>
       </div>
 
+      <div class="listing-promo">
+        <div class="listing-promo__content">
+          <span class="listing-promo__tag">Limited Offer</span>
+          <h3 class="listing-promo__title">Upgrade your style for the season.</h3>
+          <p class="listing-promo__desc">Save up to 30% on premium electronics and fashion collections.</p>
+          <div class="code-container">
+            <div class="code-box">
+               <span class="code-box__label">ENTER PROMO CODE:</span>
+               <input type="text" id="promoInput" class="promo-input" placeholder="Enter code">
+            </div>
+            <button class="code-apply-btn" onclick="applyPromoCode()" title="Apply Code">
+               Apply -40 MAD
+            </button>
+          </div>
+        </div>
+      </div>
+
       <div class="grid-wrapper">
         
         <div class="grid" id="grid"></div>
